syntax = "proto2";
option optimize_for = SPEED;
option java_package = "pipe.election";

// enquire about the state of the leader/election
message LeaderStatus {
   required LeaderQuery action = 1;
   optional LeaderState state = 2;
   optional string leader_host= 3;
   optional int32 leader_id = 4;
   
   enum LeaderState {
      LEADERUNKNOWN = 1;
      LEADERALIVE = 2;
      LEADERDEAD = 3;
   }

   enum LeaderQuery {
      WHOISTHELEADER = 1;
      THELEADERIS = 2;
   }
}

message LeaderElection {
   required int32 term = 1;
   required int32 candidateId = 2;
   required int32 lastLogIndex = 3;
   required int32 lastLogTerm = 4;
}

message LeaderElectionResponse{
   required int32 from_node_id = 1;
   required int32 for_term = 2;
   required bool vote_granted = 3; 
}